# keychat_rust_ffi_plugin_v2

./: .gitignore  README.md  codegen.sh  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
cargokit/: run_build_tool.sh
ios/: keychat_rust_ffi_plugin_v2.podspec
ios/Classes/: keychat_rust_ffi_plugin_v2.c
lib/: api_v2.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
macos/: keychat_rust_ffi_plugin_v2.podspec
rust/: Cargo.toml
rust/src/: api_v2.rs  frb_generated.rs  lib.rs
rust/tests/: accept_address.rs  ffi_return_values.rs  mls_v2.rs  multi_identity.rs  persistence.rs  prekey_address.rs  three_party.rs
windows/: CMakeLists.txt
